2005-11-27  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.c: Reindent and fix whitespace, remove
	redundant parens.

2005-11-27  Steven Bosscher  <stevenb@suse.de>

	* cfgcleanup.c (try_crossjump_to_edge): Always split SRC2 if it
	has EH predecessor edges.

2005-11-26  Eric Christopher  <echristo@apple.com>

	* config/i386/i386.md (*zero_extendqihi2_movzbw): Avoid partial
	register stalls by zero extending to the full register.

2005-11-27  Joseph S. Myers  <joseph@codesourcery.com>

	* config/floatunsisf.c, config/floatunsidf.c,
	config/floatunsixf.c, config/floatunsitf.c: New files.
	* config/ia64/t-hpux: Add floatunsitf.c.
	* config/ia64/ia64.c (ia64_init_libfuncs): Use
	_U_Qfcnvxuf_dbl_to_quad for unsigned DImode-to-TFmode conversion.

2005-11-26  Richard Henderson  <rth@redhat.com>

	* c-lex.c (pragma_lex): Rename from c_lex.
	* c-pch.c: Update for pragma_lex rename.
	* c-pragma.c, c-pragma.h, config/ia64/ia64-c.c: Likewise.
	* config/m32c/m32c-pragma.c, config/darwin-c.c: Likewise.
	* config/rs6000/rs6000-c.c, config/c4x/c4x-c.c: Likewise.
	* config/sol2-c.c, config/v850/v850-c.c: Likewise.
	* doc/tm.texi: Likewise.

2005-11-26  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/23669
	* fold-const.c (fold_binary): Convert -A/-B to A/B for signed types
	when overflow is undefined.

2005-11-26  Hans-Peter Nilsson  <hp@axis.com>

	* doc/md.texi (Insn Canonicalizations): Refer to the
	function commutative_operand_precedence for further rules.

2005-11-25  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/21309
	* expmed.c (choose_mult_variant): Return immediately when mult_cost
	is less than zero.  Limit mult_cost to a reasonable upper bound for
	the synthetic multiplication sequence.

2005-11-25  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR middle-end/25022
	* builtins.c (expand_builtin_printf, expand_builtin_fprintf,
	fold_builtin_fputs, fold_builtin_printf, fold_builtin_fprintf):
	Lookup the explicit replacement functions for any unlocked